--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".data.MovieContentProvider"
+            android:authorities="com.meredithbayne.toppopularmovies"
+            android:exported="false" />
+
         <activity
             android:name=".MovieDetailsActivity"
             android:label="@string/title_movie_detail"
