--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,20 +23,20 @@
             </intent-filter>
         </activity>
 
-        <provider
-            android:name=".data.MovieContentProvider"
-            android:authorities="com.meredithbayne.toppopularmovies"
-            android:exported="false" />
-
         <activity
             android:name=".MovieDetailsActivity"
             android:label="@string/title_movie_detail"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.meredithbayne.toppopularmovies.MainActivity" />
         </activity>
+        
+        <provider
+            android:authorities="com.meredithbayne.toppopularmovies"
+            android:name=".data.MovieContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
